deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geth
  labels:
    app: geth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geth
  template:
    metadata:
      labels:
        app: geth
    spec:
      containers:
      - image: ethereum/client-go:latest
        name: geth
        args:
        - "--http"
        - "--http.addr=0.0.0.0"
        - "--http.vhosts=*"
        - "--http.api=eth,net,web3,txpool"
        - "--ws"
        - "--ws.addr=0.0.0.0"
        volumeMounts:
        - name: data
          mountPath: /root/.ethereum
          subPath: geth-data
        ports:
        - name: geth-http
          containerPort: 8545
        - name: geth-p2p
          containerPort: 30303
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: geth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geth-exporter
  labels:
    app: geth-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geth-exporter
  template:
    metadata:
      labels:
        app: geth-exporter
    spec:
      containers:
      - image: hunterlong/gethexporter:latest
        name: geth-exporter
        ports:
        - name: geth-exporter
          containerPort: 9090
---

kind: Service
apiVersion: v1
metadata:
  name: geth-exporter
  labels:
    app: geth-exporter
spec:
  selector:
    app: geth-exporter
  ports:
  - name: geth-exporter
    port: 9090
---
kind: Service
apiVersion: v1
metadata:
  name: geth
  labels:
    app: geth
spec:
  selector:
    app: geth
  ports:
  - name: geth-p2p
    port: 30303
  - name: geth-http
    port: 8545
